--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           Web Developer
         </h1>
         <img src="images/subbu.jpg" alt="John Smith" class="person-img" />
-        <h3 class="person-name">John Smith</h3>
+        <h3 class="person-name">Vennelaganti Subramanyam</h3>
         <a href="#section-3" class="section-1-btn">Projects</a>
       </section>
       <!-- End of Section 1 -->
